feat: implementation of remote web-audio playback for headless systems